// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Wall without crashing 1`] = `
<Keyboard
  shortcuts={
    Array [
      Object {
        "action": [Function],
        "shortcut": "arrow-down",
      },
      Object {
        "action": [Function],
        "shortcut": "arrow-left",
      },
      Object {
        "action": [Function],
        "shortcut": "arrow-right",
      },
      Object {
        "action": [Function],
        "shortcut": "arrow-up",
      },
    ]
  }
>
  <div
    className="App no-select"
  >
    <Connect(Sidebar) />
    <main
      className="main"
    >
      <Connect(Wall) />
    </main>
  </div>
</Keyboard>
`;

exports[`renders Welcome without crashing 1`] = `
<div
  className="App no-select"
>
  <Connect(Sidebar) />
  <main
    className="main"
  >
    <Connect(Welcome) />
  </main>
</div>
`;
